--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node --experimental-modules src/index.mjs"
   },
   "author": "",
   "license": "ISC"
